--- a/topics/templates/topics/list.html
+++ b/topics/templates/topics/list.html
@@ -58,6 +58,8 @@
 							</div>
 						</div>
 					{% endif %}
+
+					{% include 'webpages/list.html' with topic=topic %}
 			    </div>
 		    </div>
 		{% endif %}
