--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -750,3 +750,31 @@ a.add-row {
     -ms-user-select: none;
     user-select: none;
 }
+
+.resource_list {
+    margin-left: 30px;
+    border-top: none !important;
+}
+
+.resource_list > .list-group-item:first-child {
+    border-top-left-radius: 4px !important;
+    border-top-right-radius: 4px !important;
+}
+
+.resource_list > .list-group-item {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+    margin-bottom: -1px;
+    border-width: 1px !important;
+}
+
+.resource_list > .list-group-item:last-child {
+    margin-bottom: 0;
+    border-bottom-right-radius: 4px !important;
+    border-bottom-left-radius: 4px !important;
+}
+
+.resource_list .list-group-item .list-group-item-heading {
+    font-weight: 500;
+}
