--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -361,8 +361,20 @@ a.add-row {
     border: 1px solid #ddd;
 }
 
+.resource_list > .list-group-item:hover {
+    background: #F5F5F5;
+}
+
 .resource_list > .list-group-item:last-child {
     border-bottom: 1px solid #ddd !important;
+}
+
+.resource_list .category-card-items i {
+    color: #CCCCCC;
+}
+
+.resource_list a {
+    color: inherit;
 }
 
 @media(max-width: 768px) {
