Adding invisible resource style

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -786,6 +786,10 @@ a.add-row {
     margin: 0px;
 }
 
+.resource_list > .disabled a {
+    cursor: not-allowed;
+}
+
 .resource_list a:hover, .resource_list a:focus {
     text-decoration: none;
 }
