modified course.js to category.js and where it's imported

--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -151,5 +151,5 @@
     </div>
     <div id="modal_course">
     </div>
-    <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/category.js' %}"></script>
 {% endblock %}
