--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -193,7 +193,7 @@
 
     <div id="modal_subject"></div>
     
-    <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/category.js' %}"></script>
     <script type="text/javascript">
         $(function (){
             var cat_slug = "{{ cat_slug }}"
