--- a/topics/templates/topics/list.html
+++ b/topics/templates/topics/list.html
@@ -67,4 +67,4 @@
 </div>
 
 <script type="text/javascript" src="{% static 'js/topics.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/course.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/category.js' %}"></script>
