--- a/students_group/templates/groups/index.html
+++ b/students_group/templates/groups/index.html
@@ -85,5 +85,5 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/category.js' %}"></script>
 {% endblock %}
