--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -45,5 +45,5 @@
 	</div>
 
 
-    <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/category.js' %}"></script>
 {% endblock content %}
