--- a/subjects/templates/subjects/list_search.html
+++ b/subjects/templates/subjects/list_search.html
@@ -66,6 +66,6 @@
 
     <div id="modal_subject"></div>
     
-    <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/category.js' %}"></script>
 	
 {% endblock content %}
