--- a/webpage/templates/webpages/list.html
+++ b/webpage/templates/webpages/list.html
@@ -25,7 +25,7 @@
 			                    <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
 			                </a>
 			                <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="moreResources">
-			                    <li><a href="{% url 'topics:update' subject.slug topic.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+			                    <li><a href="{% url 'webpages:update' topic.slug resource.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
 			                    <li><a href="javascript:delete_topic('{% url 'topics:delete' topic.slug %}')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>{% trans 'Remove' %}</a></li>
 			                </ul>
 			            </span>
