--- a/webpage/templates/webpages/view.html
+++ b/webpage/templates/webpages/view.html
@@ -28,34 +28,20 @@
     {% subject_permissions request.user subject as has_subject_permissions %}
 
     {% if subject.visible %}
-		<div class="panel panel-info subject-panel">
+		<div class="panel panel-info topic-panel">
         	<div class="panel-heading">
 	{% elif has_subject_permissions %}
-		<div class="panel panel-info subject-panel-invisible">
+		<div class="panel panel-info topic-panel-invisible">
         	<div class="panel-heading panel-invisible">
     {% endif %}
     		<div class="row">
                 <div class="col-md-12 category-header">
                     <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
-                        <span>{{subject.name}}</span>
+                        <span>{{ webpage }}</span>
                     </h4>
 
                     <div class="col-md-5 pull-right category-card-items">
-                        {% if request.user in subject.professor.all or request.user in subject.category.coordinators.all or request.user.is_staff %}
-                            <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
-                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-                            </a>
-                            <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                                <li><a href="{% url 'subjects:replicate' subject.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
-                                <li><a href="{% url 'subjects:update' subject.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-                                <li><a href="{% url 'groups:index' subject.slug %}"><i class="fa fa-group fa-fw" aria-hidden="true"></i>{% trans 'Groups' %}</a></li>
-                                <li><a href="javascript:delete_subject.get('{% url 'subjects:delete' subject.slug %}?view=index','#subject','#modal_subject')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
-                            </ul>
-                        {% endif %}
                         <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
