--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -1,17 +1,26 @@
-{% load static i18n permission_tags %}
-{% if subject.visible %}
-    <div class="panel panel-info subject-panel">
-        <div class="panel-heading">
+{% load static i18n permissions_tags %}
+
+{% subject_permissions request.user subject as has_subject_permissions %}
+{% subject_view_permissions request.user subject as has_subject_view_permissions %}
+
+{% if subject.visible or has_subject_permissions %}
+    {% if subject.visible %}
+        <div class="panel panel-info subject-panel">
+            <div class="panel-heading">
+    {% elif has_subject_permissions %}
+        <div class="panel panel-info subject-panel-invisible">
+            <div class="panel-heading panel-invisible">
+    {% endif %}
             <div class="row">
                 <div class="col-md-12 category-header">
                     <h4 class="panel-title">
                         <a class="category-course-link pull-left" data-parent="#{% if accordion_id %}{{ accordion_id }}{% else %}{{ subject.category.slug }}-accordion{% endif %}" data-toggle="collapse" href="#{{subject.slug}}">
-                            <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{subject.name}}
+                            <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{ subject }}
                         </a>
                     </h4>
 
                     <div class="col-md-5 pull-right category-card-items">
-                        {% if request.user in subject.professor.all or request.user in subject.category.coordinators.all or request.user.is_staff %}
+                        {% if has_subject_permissions %}
                             <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
                                 <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
                             </a>
@@ -56,71 +65,10 @@
             
             {% if show_buttons %}                 
                                         
-                {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in subject.category.coordinators.all %}
+                {% if has_subject_view_permissions %}
                     <a href="{% url 'subjects:view' subject.slug %}" class="btn btn-success btn-raised"> {% trans "Access Subject" %}</a>
                 {% else %}
                     <a href="javascript:subscribe_subject.get('{% url 'subjects:subscribe' subject.slug %}?view=index','#subject-subscribe','#modal_subject')" class="subscribe-subject btn btn-primary btn-raised"> {% trans "Subscribe to Subject" %}</a>
-                {% endif %}
-
-            {% endif %}
-        </div>
-    </div>
-{% elif request.user in subject.professor.all or request.user in subject.category.coordinators.all or request.user.is_staff %}
-    <div class="panel panel-info subject-panel-invisible">
-        <div class="panel-heading panel-invisible">
-            <div class="row">
-                <div class="col-md-12 category-header">
-                    <h4 class="panel-title">
-                        <a class="category-course-link pull-left" data-parent="#{% if accordion_id %}{{ accordion_id }}{% else %}{{ subject.category.slug }}-accordion{% endif %}" data-toggle="collapse" href="#{{subject.slug}}">
-                            <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{subject.name}}
-                        </a>
-                    </h4>
-
-                    <div class="col-md-5 pull-right category-card-items">
-                        {% if request.user in subject.professor.all or request.user in subject.category.coordinators.all  or request.user.is_staff %}
-                            <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
-                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-                            </a>
-                            <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                                <li><a href="{% url 'subjects:replicate' subject.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
-                                <li><a href="{% url 'subjects:update' subject.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-                                <li><a href="javascript:delete_subject.get('{% url 'subjects:delete' subject.slug %}?view=index','#subject','#modal_subject')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
-                            </ul>
-                        {% endif %}
-                        <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="{{subject.slug}}" class="panel-collapse collapse category-panel-content">
-            <div class="row">
-                <div class="col-md-6">
-                    {% if subject.professor.all|length > 0  %}
-                        <h4><b>{% trans "Professor(s) " %}: </b>
-                            {{ subject.professor.all|join:', ' }}
-                        </h4>
-                    {% else %}
-                        <h4> {% trans "It doesn't possess professors" %} </h4>
-                    {% endif %}
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <p><b>{% trans "Beginning" %}:</b> {{subject.init_date}}</p>
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
-                </div>
-            </div>
-
-            <p>{{subject.description_brief|safe}}</p>
-             {% if show_buttons %}                 
-                                        
-                {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in subject.category.coordinators.all %}
-                    <a href="{% url 'subjects:view' subject.slug %}" class="btn btn-success btn-raised"> {% trans "ACESS SUBJECT" %}</a>
-                {% else %}
-                    <a href="{% url 'subjects:subscribe' subject.slug %}?view=index','#subject','#subject')" class="subscribe-subject btn btn-primary btn-raised"> {% trans "SUBSCRIBE TO SUBJECT" %}</a>
                 {% endif %}
 
             {% endif %}
