--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -154,6 +154,9 @@
                             <div id="{{category.slug}}" class="panel-collapse panel-body collapse category-panel-content">
                                 <input type="hidden" class="log_url" value="{% url 'categories:view_log' category.id %}" />
                                 <input type="hidden" class="log_id" value="" />
+
+                                <input type="hidden" class="load_sub_url" value="{% url 'subjects:load_view' category.slug %}" />
+
                                 {% if category.coordinators.all|length > 0  %}
                                     <h4><b>{% trans "Coordinator(s) " %}: </b>
                                         {{ category.coordinators.all|join:', ' }}
