--- a/webpage/templates/webpages/create.html
+++ b/webpage/templates/webpages/create.html
@@ -16,7 +16,7 @@
 {% block breadcrumbs %}
 	{{ block.super }}
 
-	{% breadcrumb topic 'subjects:view' topic.subject.slug %}
+	{% breadcrumb topic 'subjects:topic_view' topic.subject.slug topic.slug %}
 	
 	{% trans 'Create Webpage' as bread %}
 	{% breadcrumb bread 'webpages:create' topic.slug %}
