--- a/webpage/templates/webpages/list.html
+++ b/webpage/templates/webpages/list.html
@@ -20,10 +20,10 @@
 				{% if has_subject_permissions %}
 					<div class="pull-right category-card-items">
 		                <a><i class="fa fa-arrows" aria-hidden="true"></i></a>
-		                <span class="btn-group">
-			                <a href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
-			                    <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-			                </a>
+		                <span class="btn-group pull-right">
+			                <button class="btn btn-sm btn_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			                	<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+			                </button>
 			                <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="moreResources">
 			                    <li><a href="{% url 'webpages:update' topic.slug resource.slug %}" class="edit"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
 			                    <li><a href="javascript:delete_resource('{% url 'webpages:delete' resource.slug %}')" class="delete"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>{% trans 'Remove' %}</a></li>
@@ -53,11 +53,11 @@
 	$(".list-group-item").unbind().on('click', function (e) {
 		var arrow = $(this).find('i.fa-arrows').is(e.target),
 			menu = $(this).find('i.fa-ellipsis-v').is(e.target),
+			btn = $(this).find('button.btn_menu').is(e.target),
 			del = $(this).find('a.delete').is(e.target),
 			upd = $(this).find('a.edit').is(e.target);
 		
-
-		if (!arrow && !menu && !del && !upd) {
+		if (!arrow && !menu && !del && !upd && !btn) {
 			var link = $(this).find('.resource_link').attr('href'),
 				target = $(this).find('.resource_link').attr('target');
 
