Updating webpage links

--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -370,7 +370,7 @@ a.add-row {
 }
 
 .resource_list > .disabled a {
-    color: #777;
+    color: #BDBDBD;
 }
 
 .resource_list > .list-group-item:hover {
