--- a/topics/templates/topics/list.html
+++ b/topics/templates/topics/list.html
@@ -59,7 +59,7 @@
 						</div>
 					{% endif %}
 
-					{% include 'webpages/list.html' with topic=topic %}
+					{% include 'resources/list.html' with topic=topic %}
 			    </div>
 		    </div>
 		{% endif %}
