--- a/topics/templates/resources/list.html
+++ b/topics/templates/resources/list.html
@@ -25,8 +25,8 @@
 			                	<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
 			                </button>
 			                <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="moreResources">
-			                    <li><a href="{% url 'webpages:update' topic.slug resource.slug %}" class="edit"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-			                    <li><a href="javascript:delete_resource('{% url 'webpages:delete' resource.slug %}')" class="delete"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>{% trans 'Remove' %}</a></li>
+			                    <li><a href="{% url resource.update_link topic.slug resource.slug %}" class="edit"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+			                    <li><a href="javascript:delete_resource('{% url resource.delete_link resource.slug %}')" class="delete"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>{% trans 'Remove' %}</a></li>
 			                </ul>
 			            </span>
 		        	</div>
