--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -36,6 +36,12 @@
 		font-size: 20px;
 		margin-top: 8px;
 	}
+
+	.users-cloud  .small a {
+        
+        display:none;
+    }
+
 }
 
 @media(min-width: 768px) {
